[gd_scene load_steps=10 format=3 uid="uid://cg64tss28lfvx"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_ci6ca"]
[ext_resource type="PackedScene" uid="uid://4bkm5ku1dlce" path="res://scenes/board.tscn" id="2_1o0vd"]
[ext_resource type="PackedScene" uid="uid://coxxd3ndthibi" path="res://scenes/character.tscn" id="2_5w011"]
[ext_resource type="PackedScene" uid="uid://bibhw7mpu8iy1" path="res://scenes/enemy.tscn" id="4_tvnff"]

[sub_resource type="Curve2D" id="Curve2D_j1iqu"]
bake_interval = 2.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 36.0195, 227, -16.4728, -2.80299, 16.4728, 2.80299, 96.2099, 228, -31.3514, -29.7117, 31.3514, 29.7117, 143.13, 290, -15.6757, -1.96209, 15.6757, 1.96209, 187.206, 338, -13.5502, 40.9236, 13.5502, -40.9236, 221.804, 274, -9.03345, -1.1212, 9.03345, 1.1212, 256.876, 239, -5.3138, -9.53016, 5.3138, 9.53016, 278.203, 253, -21.7866, -21.8633, 21.7866, 21.8633, 306.639, 305, -31.0857, -6.16657, 31.0857, 6.16657, 352.612, 336, -29.2259, 43.166, 29.2259, -43.166, 406.167, 241, -27.8974, -25.7875, 27.8974, 25.7875, 454.983, 223, -15.1443, 6.16657, 15.1443, -6.16657, 499.533, 227, -30.2886, -5.04538, 30.2886, 5.04538, 538.396, 283, -30.5543, -7.84837, 30.5543, 7.84837, 574.89, 332, -20.1924, 41.4842, 20.1924, -41.4842, 670.152, 269, 0, 0, 0, 0, 720.389, 222)
}
point_count = 16

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5p1sd"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_n8tep"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7d38f"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6gnbg"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ci6ca")
gameOverScene = "res://scenes/game_over.tscn"
character = ExtResource("2_5w011")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(38, 251)

[node name="BoardPath" type="Path2D" parent="."]
position = Vector2(-38, 24)
scale = Vector2(2.10997, 1)
curve = SubResource("Curve2D_j1iqu")

[node name="BoardFollow" type="PathFollow2D" parent="BoardPath"]
position = Vector2(36.0195, 227)
rotation = 0.0166124
loop = false

[node name="board" parent="BoardPath/BoardFollow" instance=ExtResource("2_1o0vd")]
collision_layer = 2
collision_mask = 0

[node name="Camera2D" type="Camera2D" parent="BoardPath/BoardFollow/board"]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="BoardPath/BoardFollow/board/Camera2D"]

[node name="LoseButton" type="Button" parent="BoardPath/BoardFollow/board/Camera2D/CanvasLayer"]
offset_left = 163.0
offset_top = 16.0
offset_right = 215.0
offset_bottom = 47.0
text = "LOSE!"

[node name="NewPathButton" type="Button" parent="BoardPath/BoardFollow/board/Camera2D/CanvasLayer"]
offset_left = 8.0
offset_top = 16.0
offset_right = 99.0
offset_bottom = 47.0
text = "NEW PATH"

[node name="WinButton" type="Button" parent="BoardPath/BoardFollow/board/Camera2D/CanvasLayer"]
offset_left = 108.0
offset_top = 16.0
offset_right = 153.0
offset_bottom = 47.0
text = "WIN!"

[node name="LevelIndicator" type="Control" parent="BoardPath/BoardFollow/board/Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="BoardPath/BoardFollow/board/Camera2D/CanvasLayer/LevelIndicator"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 98.0
offset_bottom = 77.0
show_percentage = false

[node name="Enemy" parent="." instance=ExtResource("4_tvnff")]
position = Vector2(885, 369)
scale = Vector2(4, 4)

[node name="Walls" type="Area2D" parent="."]

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Walls"]
shape = SubResource("WorldBoundaryShape2D_5p1sd")

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Walls"]
position = Vector2(959, 0)
shape = SubResource("WorldBoundaryShape2D_n8tep")

[node name="CollisionShape2DTop" type="CollisionShape2D" parent="Walls"]
position = Vector2(452, 0)
shape = SubResource("WorldBoundaryShape2D_7d38f")

[node name="CollisionShape2DBottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 540)
shape = SubResource("WorldBoundaryShape2D_6gnbg")

[connection signal="pressed" from="BoardPath/BoardFollow/board/Camera2D/CanvasLayer/LoseButton" to="." method="_on_lose_button_pressed"]
[connection signal="pressed" from="BoardPath/BoardFollow/board/Camera2D/CanvasLayer/NewPathButton" to="." method="_on_new_path_button_pressed"]
[connection signal="pressed" from="BoardPath/BoardFollow/board/Camera2D/CanvasLayer/WinButton" to="." method="_on_win_button_pressed"]
